--- a/src/style.less
+++ b/src/style.less
@@ -7,8 +7,9 @@
   --background-color-rgb: 238, 238, 238;
   --shadow-color: rgba(0, 0, 0, 0.2);
   --border-color: rgb(193 193 193 / 50%);
+  --avatar-border-color: rgba(180, 180, 180, 0.6);
   --hover-link-color: #ffcc00;
-  --hover-other-color:  #555;
+  --hover-other-color: #555;
   --primary-color: #1e90ff;
   --primary-color-rgb: 30, 144, 255;
   --hover-color-light: #f4f4f4;
@@ -20,6 +21,7 @@
   --background-color-rgb: 51, 51, 51;
   --shadow-color: rgba(255, 255, 255, 0.2);
   --border-color: rgb(131 131 131 / 50%);
+  --avatar-border-color: rgba(230, 230, 230, 0.25);
   --primary-color: #66b5ff;
   --primary-color-rgb: 102, 181, 255;
   --hover-color-light: #444;
@@ -51,10 +53,6 @@ body, html {
   font-family: 'HarmonyOS_Regular', 'MiSans', 'HarmonyOS Sans SC', sans-serif;
   color: var(--text-color);
   overflow: auto;
-}
-
-body.dark-mode {
-  filter: brightness(0.7);
 }
 
 /* App 页面 */
@@ -109,6 +107,19 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+  .police_link {
+    display: none;
+  }
+
+  footer {
+    font-size: 12px;
+    padding: 10px 15px;
+
+    span, a {
+      word-break: break-all;
+    }
+  }
+
   .police_link {
     display: none;
   }
